@@ -21,7 +21,7 @@ if ( ! defined( 'ABSPATH' ) ) {
 	$input_group_html .= '</span>';
 
 	echo aui()->input(
-		array(
+		apply_filters('geodir_search_near_input_args',array(
 			'value'                   => $near,
 			'name'                    => 'snear',
 			'placeholder'             => esc_html__( $default_near_text, 'geodirectory' ),
@@ -36,7 +36,7 @@ if ( ! defined( 'ABSPATH' ) ) {
 			),
 			'input_group_left'        => '<div class="input-group-text px-2 bg-transparent border-0">' . $input_group_html . '</div>',
 			'input_group_left_inside' => true
-		)
+		))
 	);
 
 	do_action( 'geodir_after_search_near_input' );
